@@ -8,9 +8,9 @@
 	- <md5 of URI>.png, 128x128, in ~/.thumbnails/normal/
 	- delete thumbnail if image is deleted, update if image is moved, etc
 + Try to highlight selected region of cropped image (or darken unselected region)
-+ Open remote files (mirage http://blah)
++ Open remote files - use threading...
 + Screenshots (a la gsnapshot) (gtk.gdk.Pixbuf.get_from_drawable)
-+ code cleanup... (check_preloadimg_*, preload_*, animtest stuff, rename funcs)
++ code cleanup... (preload_*, animtest stuff, rename funcs)
 
 Future
 + Ability to specify save compression level?
